RESOLVED FIXED81654
[BlackBerry] Crash when dragging the FCC caret over an invalid node.
https://bugs.webkit.org/show_bug.cgi?id=81654
Summary [BlackBerry] Crash when dragging the FCC caret over an invalid node.
Mike Fenton
Reported 2012-03-20 05:33:05 PDT
The container node of a position was being used without validation in DOMSupport.
Attachments
Patch (2.22 KB, patch)
2012-03-20 06:35 PDT, Mike Fenton
no flags
Mike Fenton
Comment 1 2012-03-20 06:35:16 PDT
Rob Buis
Comment 2 2012-03-20 06:48:30 PDT
Comment on attachment 132812 [details] Patch Looks good.
WebKit Review Bot
Comment 3 2012-03-20 07:25:08 PDT
Comment on attachment 132812 [details] Patch Clearing flags on attachment: 132812 Committed r111390: <http://trac.webkit.org/changeset/111390>
WebKit Review Bot
Comment 4 2012-03-20 07:25:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.