[BlackBerry] Crash when dragging the FCC caret over an invalid node. https://bugs.webkit.org/show_bug.cgi?id=81654

Reviewed by Rob Buis.

PR 144505.

The position did not have a valid container node and was causing
a crash.  Validate the node pointer before using it.

* WebKitSupport/DOMSupport.cpp:
(BlackBerry::WebKit::DOMSupport::DOMContainerNodeForPosition):


Canonical link: https://commits.webkit.org/98912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111390 268f45cc-cd09-0410-ab3c-d52691b4dbfc